// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/Table Defaults play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table id="htmlId"
           class="_table_1kbf9_15  _table_standard_1kbf9_38 dummyClassname"
           lang="nb"
           data-testid="123ID"
    >
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithCanBeManuallyFocused play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 "
           tabindex="-1"
    >
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithDefaultRowInEditMode smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rs:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rs:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rt:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rt:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ru:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ru:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rv:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rv:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    disabled
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r11:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r11:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class="_editableRow_expanded_1xi8g_5 "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  _buttonCell_expanded_1rqke_14">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _hideIcon_1rqke_38"
                    disabled
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r13:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r13:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
            <div class="_expandableContent_1rqke_22 _expandableContent_1xi8g_47"
                 style="width: 515px;"
            >
              <div class="_editableRowTriangle_1xi8g_21">
              </div>
              <span class="_srOnly_1xi8g_54"
                    tabindex="-1"
              >
                Rediger data
              </span>
              <div class="emptyExpandedTableRow">
              </div>
            </div>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    disabled
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r15:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r15:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r16:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r16:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
      Ikke sortert
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithExpandEditSort smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rb:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rb:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rc:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rc:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rd:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rd:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:re:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:re:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rg:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rg:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ri:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ri:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
      Ikke sortert
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithFullWidthAndTextAlignment smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15 _table_fullWidth_1kbf9_35 _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            left
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_center_1525d_57 "
              scope="col"
          >
            center
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_right_1525d_54 "
              scope="col"
          >
            right
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            default
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_right_1525d_54 "
              scope="col"
          >
            right
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            center
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            default
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            left
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            center
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            default
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            right
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithFullWidthExpandableEdit smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15 _table_fullWidth_1kbf9_35 _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1i:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1i:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1j:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1j:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1k:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1k:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1l:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1l:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1n:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1n:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1p:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1p:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1r:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1r:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1s:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1s:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
      Ikke sortert
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithRef play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 "
           id="dummyIdForwardedFromRef"
    >
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Category
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Items
          </th>
          <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Donuts
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Cake
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20 _dataCell_rowspan_1ot0q_16 rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Stationery
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            Batteries
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithScrollbar smoke-test 1`] = `
<div data-test-block="true">
  <p>
    Table med Scrollbar
  </p>
  <div class="scrollTableWrapper">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperSuccess">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperWarning">
    <div class="_wrapper_1kbf9_5 ">
      <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
        <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Forename
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              Surname
            </th>
            <th class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Otto
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Octavius
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Norman
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Osbourne
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Curt
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              Connors
            </td>
            <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithVariantCompact smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_compact_1kbf9_41 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_compact_1kbf9_31">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_compact_1525d_63  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r0:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r0:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r2:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r2:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_compact_1525d_63"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r3:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r3:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5 _buttonCell_compact_1rqke_17 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r5:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r5:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5 _buttonCell_compact_1rqke_17 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r7:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r7:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5 _buttonCell_compact_1rqke_17 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r9:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r9:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5 _buttonCell_compact_1rqke_17 ">
            <button class="_button_g87u5_1 _button_extraSmall_g87u5_29  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ra:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ra:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_compact_1ot0q_29 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
      Ikke sortert
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithWideScreen smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="_table_1kbf9_15  _table_standard_1kbf9_38 ">
      <caption class="_tableCaption_1kbf9_22 _hidden_1kbf9_45 _tableCaption_standard_1kbf9_28">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="_headerCell_1525d_1 _headerCell_standard_1525d_1  _headerCell_left_1525d_51 ">
          </td>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_left_1525d_51 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Dekningsgrad
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r17:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r17:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Beløp
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_center_1525d_57 "
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Måned
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r19:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r19:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
          <th class="_headerCell_1525d_1 _headerCell_noPadding_1525d_17  _headerCell_right_1525d_54 "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="_headerCellSortButton_1525d_20 _headerCell_standard_1525d_1"
                    type="button"
            >
              Avkastning
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _headerCellSortButtonIcon_1525d_31"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1a:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1a:">
                  Sorterbar
                </title>
                <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                      fill-rule="evenodd"
                      clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id="s5f0e"
            class=" "
            data-testid="row-0"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1c:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1c:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            100 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5426
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Januar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1000
          </td>
        </tr>
        <tr id="3vesy"
            class=" "
            data-testid="row-1"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1e:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1e:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            50 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            5432
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Februar
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            500
          </td>
        </tr>
        <tr id="16prz"
            class=" "
            data-testid="row-2"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1g:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1g:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            20 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            4899
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            Mars
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  _buttonCell_1rqke_5  ">
            <button class="_button_g87u5_1 _button_large_g87u5_52  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1h:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1h:">
                  Mer informasjon
                </title>
                <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_left_1ot0q_20  "
          >
            30 %
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            2344
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_center_1ot0q_26  ">
            April
          </td>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1 _sum_topSeparator_16rlo_5">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="_hidden_1kbf9_45"
         aria-live="polite"
    >
      Ikke sortert
    </div>
  </div>
</div>
`;
